--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -192,11 +192,12 @@ footer .container,
 	background-color: var(--color1);
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
 	height: 370px;
+	width: 40%;
 }
 .banner .right img{
 	position: relative;
 	left: 5%;
-	width: 330px;
+	width: 100%;
 	height: 360px;
 }
 
@@ -205,11 +206,11 @@ footer .container,
 	align-items: center;
 	justify-content: space-between;
 	height: 50px;
-	padding: .25rem;
+	padding: .25rem 0 .25rem .25rem;
 	max-width: 88%;
 	border: 2px solid #dfe0e3;
 	border-radius: 0.25rem;
-	background-color: var(--color3);
+	/* background-color: var(--color3); */
 }
 
 .search form input,
@@ -445,7 +446,8 @@ footer .container,
 	margin-bottom: 5rem;
 }
 .about-container .mission .left {
-	padding: 4rem 2rem;
+	padding: 4rem 0;
+	width: 50%;
 }
 .about-container .mission .left h3,
 .about-container .story h3  {
@@ -479,21 +481,22 @@ footer .container,
 }
 
 .about-container .story .container .right {
-	padding: 1rem 2rem;
+	padding: 1rem 1.25rem;
+	width: 40%;
 }
 
 .about-container .story .container .right p {
 	margin-bottom: 2rem;
 }
 
-.about-container .story .btn,
+.about-container .btn,
 .recommended-container .btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 2rem;
 }
-.about-container .story .btn a,
+.about-container .btn a,
 .recommended-container .btn a {
 	font-size: 1rem;
 	font-weight: 300;
@@ -504,12 +507,12 @@ footer .container,
 	color: #f1f1f1;
 
 }
-.about-container .story .btn a:hover,
+.about-container .btn a:hover,
 .recommended-container .btn a:hover {
 	background-color: #d0d7ff;
 	color: var(--color1);
 }
-.about-container .story .btn a i,
+.about-container .btn a i,
 .recommended-container .btn a i {
 	color: inherit;
 }
@@ -521,7 +524,7 @@ footer .container,
 	flex-wrap: wrap;
 }
 .recommended-container .container .card {
-	width: 230px;
+	width: 248px;
 	background-color: #f5f6ff;
 	border-radius: 0.75rem;
 	margin: 1rem 0.5rem;
