Finish Service Item Design

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,14 +21,12 @@ h2 span {
 	color: var(--color1);
 }
 
-/* header {
-	background-color: #1800D4;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-	height: 100vh;
-	background-color: var(--color3);
-	background: rgb(255,255,255);
-	background: linear-gradient(90deg, rgba(14,25,230,1) 62%, rgba(14,25,230,1) 62%);
-} */
+
+.banner-section {
+    background-color: #1800D4;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+    height: 94vh;
+}
 a {
 	text-decoration: none;
 
@@ -42,7 +40,7 @@ ul {
 }
 
 header {
-	background-color: var(--color1);
+	background-color: #1800D4;
 }
 
 /* Header Styles */
@@ -79,6 +77,7 @@ footer .container,
 .navbar .nav-logo h1{
 	font-weight: 700;
 	color: #f1f1f1;
+	font-size:1.3rem;
 }
 
 /* Navigation Category Dropdown */
@@ -99,17 +98,16 @@ footer .container,
 .nav-cat-dropdown .dropdown-content {
 	display: none;
 	position: absolute;
-	top: 19px;
+	top: calc(100% + 15px); /* Adjust the spacing here */
 	background-color: #f1f1f1;
-  width: 150px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-	border-radius: 0.5rem;
-	left: -7px;
+	width: 150px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	left: -5px;
 }
 
 .nav-cat-dropdown .dropdown-content li {
-	padding:0.75rem 1rem;
+	padding: 0.75rem 1rem;
 
 }
 .nav-cat-dropdown .dropdown-content li a {
@@ -120,9 +118,12 @@ footer .container,
 	color: var(--color1);
 }
 
-.nav-cat-dropdown:hover .dropdown-content {
+/* .nav-cat-dropdown:hover .dropdown-content {
 	display: block;
+} */
 
+.nav-cat-dropdown.open .dropdown-content {
+	display: block;
 }
 
 .nav-container {
@@ -166,21 +167,22 @@ footer .container,
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	/* padding-top: 5rem; */
-
 }
 
+.banner .left {
+	width: 70%;
+	margin-right: 0.5rem;
+}
 .banner .left h1{
 	padding-bottom: 0.25rem;
 	font-size: var(--font-heading-1);
 	line-height: 3rem;
-	/* color: var(--color1); */
+	color: var(--color5);
 }
 
 .banner .left h1 span {
 	padding: .2rem .5rem;
-	background-color: var(--color1);
-	color: #ffffff;
+	background-color: #ffffff;
 	border-radius: 0.75rem 0.5rem;
 }
 
@@ -188,17 +190,12 @@ footer .container,
 	margin: 1rem 0;
 }
 
-.banner .right {
-	background-color: var(--color1);
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-	height: 370px;
-	width: 40%;
+.banner .right-banner {
+	width: 30%;
 }
-.banner .right img{
-	position: relative;
-	left: 5%;
-	width: 100%;
-	height: 360px;
+.banner .right-banner img{
+	max-width:100%;
+	height: 520px;
 }
 
 .search form {
@@ -207,10 +204,10 @@ footer .container,
 	justify-content: space-between;
 	height: 50px;
 	padding: .25rem 0 .25rem .25rem;
-	max-width: 88%;
-	border: 2px solid #dfe0e3;
+	max-width: 100%;
+	border: 1px solid #dfe0e3;
 	border-radius: 0.25rem;
-	/* background-color: var(--color3); */
+	background-color: var(--color3);
 }
 
 .search form input,
@@ -239,7 +236,7 @@ footer .container,
 .category-container,
 .about-container,
 .recommended-container  {
-	padding-top: 8rem;
+	padding-top: 5rem;
 	padding-bottom: 8rem;
 }
 
@@ -292,7 +289,6 @@ footer .container,
 .bonnafaire-container .raw .box h3 {
 	margin-bottom: 1rem;
 	font-size: var(--font-heading-3);
-	/* font-weight: 600; */
 }
 
 .bonnafaire-container .raw .box p {
@@ -517,6 +513,116 @@ footer .container,
 	color: inherit;
 }
 
+
+/* Begin Slider */
+
+/*--------------About Slider-------------*/
+
+.slider {
+	max-width: 100%;
+	height: 45rem;
+	margin: 0 auto;
+	position: relative;
+	overflow: hidden;
+}
+
+.slide {
+	position: absolute;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: transform 1s;
+	height: 45rem;
+}
+
+.slide .box {
+	width: 260px;
+	border-radius: 2rem;
+	margin: .75rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--color3);
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+.slide .box .image {
+	padding: 1rem;
+}
+.slide .box img {
+	height: 240px;
+	width: 220px;
+	border-radius: 49% 51% 48% 52% / 30% 29% 71% 70% ;
+}
+.slide .box .detail {
+	padding: 1rem;
+	text-align: center;
+	margin-bottom: .5rem;
+}
+.slide .box .detail .social-media i{
+	color: var(--color1);
+	font-size: 1.2rem;
+	margin-top: .25rem;
+}
+
+.slider__btn {
+	position: absolute;
+	top: 50%;
+	z-index: 10;
+	border: none;
+	background: var(--color1);
+	font-family: inherit;
+	color: var(--color5);
+	border-radius: 50%;
+	height: 2.2rem;
+	width: 2.2rem;
+	font-size: var(--heading2);
+	cursor: pointer;
+}
+
+.slider__btn--left {
+	left: 6%;
+	transform: translate(-50%, -50%);
+}
+
+.slider__btn--right {
+	right: 6%;
+	transform: translate(50%, -50%);
+}
+
+.dots {
+	position: absolute;
+	bottom: 5%;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+}
+
+.dots__dot {
+	border: none;
+	background-color: #b9b9b9;
+	opacity: 0.7;
+	height: 1rem;
+	width: 1rem;
+	border-radius: 50%;
+	margin-right: 1.75rem;
+	cursor: pointer;
+	transition: all 0.5s;
+}
+
+.dots__dot:last-child {
+	margin: 0;
+}
+
+.dots__dot--active {
+	background-color: var(--color1);
+	opacity: 1;
+}
+
+
+/* End Slider */
+
 /* Recommended */
 .recommended-container .container {
 	display: flex;
@@ -600,9 +706,10 @@ footer .container,
 /* Footer  */
 
 footer {
-	background-color: #f0f0f0;
+	background-color: var(--color4);
 	padding-top: 3rem;
 	padding-bottom: 2rem;
+
 }
 footer .container .raw{
 	display: flex;
@@ -613,6 +720,7 @@ footer .container .raw{
 footer .container h3 {
 	font-size: var(--font-heading-3);
 	margin-bottom: 1rem;
+	color: var(--color5);
 }
 footer .container .box {
 	padding-bottom: 2rem;
@@ -624,7 +732,7 @@ footer .container .box i {
 }
 footer .container .box li,
 footer .container .box li a{
-	color: #000111;
+	color: var(--color5);
 	font-weight: 300;
 	font-size: 0.9rem;
 	padding: 0.25rem 0;
@@ -638,16 +746,25 @@ footer .container .copyright {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	padding-top: 1rem;
-	border-top: 2px solid #d5d5d5;
+	border-top: 1px solid #d5d5d5;
 	font-weight: 300;
 }
-
+footer .container .copyright .text {
+	color: var(--color5);
+}
 footer .container .copyright .social i {
-	font-size: 1.2rem;
+	font-size: 1.3rem;
 	color: #666999;
 	margin:0 0.1rem;
 }
 
 footer .container .copyright .social i:hover {
 	color: var(--color1);
+}
+
+
+/* Services Page */
+
+.recommended-container .searchBar{
+	padding: 0 1rem 2rem;
 }
