--- a/resources/views/draft.html
+++ b/resources/views/draft.html
@@ -366,12 +366,13 @@
 	<div class="mission">
 		<div class="left">
 			<h3>Notre Mission</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-				Asperiores, consequatur pariatur? Deleniti animi rem asperiores quidem,
-				sed at nihil quos inciduntnulla similique consectetur cum voluptas doloribus hic unde ipsam.
+			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit.
 				Asperiores, consequatur pariatur? Deleniti animi rem asperiores quidem,
-				sed at nihil quos inciduntnulla similique consectetur cum voluptas doloribus hic unde ipsam.
+				sed at nihil quos inciduntnulla similique consectetur cum voluptas.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolor sit amet consectetur adipisicing elit.
+				Asperiores, consequatur pariatur? Deleniti animi rem asperiores quidem,
+				sed at nihil quos inciduntnulla similique consectetur cum voluptas.
 			</p>
 		</div>
 		<div class="right">
@@ -385,7 +386,6 @@
 				<div class="video">
 					<video width="620" height="340" controls autoplay>
 						<source src="{{ asset('img/my-video.mp4') }}" type="video/mp4">
-
 						Your browser does not support the video tag.
 					</video>
 				</div>
