--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -453,7 +453,8 @@ footer .container,
 	color: var(--color1);
 }
 .about-container .mission .left p,
-.about-container .story .right p{
+.about-container .story .right p,
+.slogan p{
 	font-weight: 300;
 	line-height: 1.75rem;
 }
@@ -462,7 +463,6 @@ footer .container,
 	padding-bottom: 2rem;
 	border-radius: 5% 5% 85%;
 	background-color: #F5F6FF;
-
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23cccdd5' fill-opacity='0.11'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.11'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 }
 .about-container .mission .right img {
