--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -83,6 +83,48 @@
 }
 
 .detail-container .detail-sidebar {
-	padding: 1rem;
+	padding: .5rem;
+	flex: 3;
+	justify-content: center;
 	/* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; */
 }
+
+.detail-sidebar .owner {
+	display: flex;
+	align-items: center;
+}
+.detail-sidebar .owner img {
+	width: 65px;
+	height: 55px;
+	border-radius: 50%;
+	margin-bottom: 0.75rem;
+}
+.detail-sidebar p {
+	padding: 0.5rem;
+	text-align: center;
+	margin-bottom: .75rem;
+}
+
+.detail-sidebar .contact {
+	padding: 0.5rem;
+	display: flex;
+	font-size: 0.8rem;
+}
+
+.detail-sidebar .contact a {
+	margin: .5rem;
+	display: flex;
+	align-items: center;
+	padding: 0.75rem 1rem;
+	background-color: var(--color1);
+	color: var(--color5);
+}
+.detail-sidebar .contact a:hover {
+	background-color: var(--color7);
+}
+.detail-sidebar .contact i {
+	font-size: var( --font_icon);
+	color: var(--color5);
+	margin-right: .5rem;
+}
+
