--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,6 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	/* background-color: var(--background-color); */
 	color: var(--color4);
 }
 
@@ -11,6 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Lexend Deca', sans-serif;
 }
 body {
+	background-color: #f5f5f5;
 	/* font-family: 'Open Sans', sans-serif; */
 	/* font-family: 'Lato', sans-serif; */
 	font-family: 'Roboto', sans-serif;
@@ -23,7 +23,7 @@ h2 span {
 
 
 .banner-section {
-    background-color: #1800D4;
+    background-color: var(--color1);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
     height: 94vh;
 }
@@ -44,18 +44,10 @@ header {
 }
 
 /* Header Styles */
-.navbar,
-.banner,
-.bonnafaire-container,
-.competence-container,
-.slogan-container,
-.category-container,
-footer .container,
-.about-container,
-.recommended-container,
-.listings-container
- {
-	padding: 0.25rem 7rem;
+
+.content-layout
+{
+	padding: 0.25rem 6rem;
 	margin: 0 auto;
   max-width: 1400px;
 }
@@ -69,10 +61,6 @@ footer .container,
 	align-items: center;
 }
 
-/* .navbar .navbar .nav-logo img{
-	width: 100px;
-	height: 40px;
-} */
 
 .navbar .nav-logo h1{
 	font-weight: 700;
@@ -195,7 +183,7 @@ footer .container,
 }
 .banner .right-banner img{
 	max-width:100%;
-	height: 520px;
+	height: 550px;
 }
 
 .search form {
@@ -229,15 +217,14 @@ footer .container,
 }
 
 /* Section Why Bonnafaire */
-.banner,
 .bonnafaire-container,
 .competence-container,
 .slogan-container,
 .category-container,
 .about-container,
 .recommended-container  {
-	padding-top: 7rem;
-	padding-bottom: 8rem;
+	padding-top: 8rem;
+	padding-bottom: 9rem;
 }
 
 .bonnafaire-container .title {
@@ -314,8 +301,6 @@ footer .container,
 .slogan-container h2 {
 	color: #ffffff;
 	text-align: center;
-	margin-bottom: 1rem;
-	font-size: var(--font-heading-1);
 }
 
 .slogan-container h2 span {
@@ -389,12 +374,10 @@ footer .container,
 
 /* Category CSS */
 
-.category-container h2,
-.about-container h2,
-.recommended-container h2  {
+.title h2  {
 	text-align: center;
 	font-size: var(--font-heading-2);
-	margin-bottom: 4rem;
+	margin-bottom: 2rem;
 }
 
 .category-container .container {
@@ -633,8 +616,8 @@ footer .container,
 	flex-wrap: wrap;
 }
 .recommended-container .container .card {
-	width: 248px;
-	background-color: #f5f6ff;
+	width: 270px;
+	background-color: var(--color5);
 	border-radius: 0.75rem;
 	margin: 1rem 0.5rem;
 }
