--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -33,7 +33,7 @@
 	flex: 9;
 	padding: 1rem;
 	margin-right: 0.5rem;
-	/* background-color: var(--color6); */
+	background-color: var(--color6); 
 	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 .detail-container .raw .detail-col h2 {
