--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,12 +21,12 @@ h2 span {
 	color: var(--color1);
 }
 
-
 .banner-section {
     background-color: var(--color1);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%230408FD' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%230A00FF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
     height: 94vh;
 }
+
 a {
 	text-decoration: none;
 
@@ -43,14 +43,15 @@ header {
 	background-color: #1800D4;
 }
 
-/* Header Styles */
-
 .content-layout
 {
 	padding: 0.25rem 6rem;
 	margin: 0 auto;
-  max-width: 1400px;
+	max-width: 1400px;
 }
+
+
+/* Header Styles */
 
 .navbar {
   height: 60px;
@@ -105,10 +106,6 @@ header {
 .nav-cat-dropdown .dropdown-content li a:hover {
 	color: var(--color1);
 }
-
-/* .nav-cat-dropdown:hover .dropdown-content {
-	display: block;
-} */
 
 .nav-cat-dropdown.open .dropdown-content {
 	display: block;
@@ -223,27 +220,19 @@ header {
 .category-container,
 .about-container,
 .recommended-container  {
-	padding-top: 8rem;
-	padding-bottom: 9rem;
+	padding-top: 7rem;
+	padding-bottom: 7rem;
 }
 
 .bonnafaire-container .title {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
 	margin-bottom: 2rem;
+	text-align: center;
 }
 
-.bonnafaire-container .title P {
+.title P {
 	font-size: 1.3rem;
 }
 
-.bonnafaire-container .title h2 {
-	margin-bottom: .75rem;
-	font-size: var(--font-heading-2);
-
-}
 .bonnafaire-container .raw {
 	display: flex;
 	justify-content: space-between;
@@ -257,8 +246,8 @@ header {
 	align-items: center;
 	padding: 1.5rem .5rem;
 	height: 210px;
-	width: 250px;
-	margin-right: .75rem;
+	width: 260px;
+	margin-right: .5rem;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 	border-radius: .75rem;
 	cursor: pointer;
@@ -315,9 +304,9 @@ header {
 	color: #ffffff;
 	margin-bottom: 2rem;
 	text-align: center;
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 	line-height: 2.3rem;
-	font-weight: 200;
+	font-weight: 300;
 }
 .slogan-container p span {
 	color: var(--color1);
@@ -377,7 +366,7 @@ header {
 .title h2  {
 	text-align: center;
 	font-size: var(--font-heading-2);
-	margin-bottom: 2rem;
+	margin-bottom: 5rem;
 }
 
 .category-container .container {
@@ -409,14 +398,17 @@ header {
 	font-weight: 600;
 	font-size: var(--font-heading-3);
 	margin-top: 1.25rem;
-}
-.category-container .container .box span {
-	font-size: 0.75rem;
+
 }
 .category-container .container .box p {
 	margin-top: .75rem;
 	font-size: 0.75rem;
 	font-weight: 300;
+}
+.category-container .container .box span {
+	font-size: 1.2rem;
+	font-weight: 500;
+	margin-left: 0.25rem;
 }
 
 .about-container .mission {
