--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -8,6 +8,7 @@
 	align-items: center;
 	margin: 1.5rem 0;
 }
+
 .detail-container .categories {
 	display: flex;
 	justify-content: space-between;
@@ -15,9 +16,10 @@
 }
 
 .detail-container .categories .cat-box {
-	padding: 0.75rem 1.5rem;
+	padding: 0.75rem 1rem;
 	background-color: var(--color5);
-	font-size: 1.2rem;
+	font-size: 1rem;
+	font-weight: 300;
 	border-radius: 0.25rem;
 	/* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; */
 }
@@ -32,9 +34,14 @@
 .detail-container .raw .detail-col {
 	flex: 9;
 	padding: 1rem;
+	border-radius: 0.5rem;
 	margin-right: 0.5rem;
-	background-color: var(--color6); 
-	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+	/* background-color: var(--color6); */
+	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px;
+}
+
+.detail-container .raw .detail-col article {
+	font-weight: 300;
 }
 .detail-container .raw .detail-col h2 {
 	font-size: 1.8rem;
@@ -69,7 +76,6 @@
 }
 
 /* End Slider */
-
 .detail-container .detail-col .slide img {
 	width: 100%;
 	height: 250px;
